--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,106 +7,109 @@
     android:background="@color/black"
     tools:context=".LoginActivity">
 
-<ImageView
-    android:layout_width="match_parent"
-    android:layout_height="170dp"
-    android:layout_margin="20dp"
-    android:src="@drawable/iconoapp"/>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="30dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:src="@drawable/iconosinfondo" />
 
-        <LinearLayout
-            android:layout_marginTop="200dp"
+    <LinearLayout
+        android:layout_marginTop="200dp"
+        android:layout_width="match_parent"
+        android:layout_height="700dp"
+        android:background="@drawable/rounded_corner_top_left"
+        android:orientation="vertical"
+        android:padding="16dp"
+        >
+
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="700dp"
-            android:background="@drawable/rounded_corner_top_left"
-            android:orientation="vertical"
-            android:padding="16dp"
-            >
+            android:layout_height="wrap_content"
+            android:layout_marginTop="45dp"
+            android:layout_marginBottom="20dp"
+            android:text="@string/iniciar"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="30dp" />
 
-            <TextView
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            app:boxBackgroundMode="none">
+
+            <com.google.android.material.textfield.TextInputEditText
+
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="45dp"
-                android:layout_marginBottom="20dp"
-                android:text="@string/iniciar"
-                android:textAlignment="center"
-                android:textColor="@color/black"
-                android:textSize="30dp" />
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                app:boxBackgroundMode="none">
-
-                <com.google.android.material.textfield.TextInputEditText
-
-                    android:layout_width="match_parent"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="20dp"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/usuarioor"
-                    android:inputType="textEmailAddress"
-                    android:textColor="@color/black"
-                    android:textColorHint="@color/black" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:layout_marginBottom="20dp"
-                android:gravity="center"
-                app:boxBackgroundMode="none"
-                app:endIconMode="password_toggle">
+                android:layout_height="wrap_content"
+                android:hint="@string/usuarioor"
+                android:inputType="textEmailAddress"
+                android:textColor="@color/black"
+                android:textColorHint="@color/black" />
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/password"
-                    android:inputType="textPassword"
-                    android:textColor="@color/black"
-                    android:textColorHint="@color/black" />
-            </com.google.android.material.textfield.TextInputLayout>
+        </com.google.android.material.textfield.TextInputLayout>
 
-            <Button
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginBottom="20dp"
+            android:gravity="center"
+            app:boxBackgroundMode="none"
+            app:endIconMode="password_toggle">
+
+            <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:backgroundTint="@color/yellow"
-                android:text="@string/ingreso"
-                android:textColor="@color/white" />
-          <LinearLayout
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:layout_margin="20dp"
-              android:orientation="horizontal">
-              <ImageView
-                  android:layout_margin="10dp"
-                  android:layout_width="80dp"
-                  android:layout_height="80dp"
-                  android:src="@drawable/google"/>
-              <ImageView
-                  android:layout_margin="10dp"
-                  android:layout_width="80dp"
-                  android:layout_height="80dp"
-                  android:src="@drawable/facebook"/>
-              <ImageView
-                  android:layout_margin="10dp"
-                  android:layout_width="82dp"
-                  android:layout_height="82dp"
-                  android:src="@drawable/instagram"/>
+                android:hint="@string/password"
+                android:inputType="textPassword"
+                android:textColor="@color/black"
+                android:textColorHint="@color/black" />
+        </com.google.android.material.textfield.TextInputLayout>
 
-          </LinearLayout>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:backgroundTint="@color/yellow"
+            android:text="@string/ingreso"
+            android:textColor="@color/white" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_margin="10dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:src="@drawable/google"/>
+            <ImageView
+                android:layout_margin="10dp"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:src="@drawable/facebook"/>
+            <ImageView
+                android:layout_margin="10dp"
+                android:layout_width="82dp"
+                android:layout_height="82dp"
+                android:src="@drawable/instagram"/>
 
-
-<TextView
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:textAlignment="center"
-    android:textSize="15dp"
-    android:textColor="@color/black"
-    android:text="@string/registrate"/>
         </LinearLayout>
+
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:textSize="15dp"
+            android:textColor="@color/black"
+            android:text="@string/registrate"/>
+    </LinearLayout>
 
 </RelativeLayout>
