--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,53 +8,47 @@
     android:gravity="center"
     android:orientation="vertical"
     tools:context=".MainActivity">
-
-
-    <Button
-        android:id="@+id/btnlogin"
-        android:layout_width="295dp"
-        android:layout_height="61dp"
-        android:layout_marginBottom="28dp"
-        android:backgroundTint="@color/yellow"
-        android:text="@string/registrarsePortada"
-        android:textColor="@color/black"
-        android:textSize="60px"
-        app:layout_constraintBottom_toTopOf="@+id/imageView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <Button
-        android:id="@+id/btnregister"
-        android:layout_width="295dp"
-        android:layout_height="61dp"
-        android:layout_marginTop="12dp"
-        android:backgroundTint="@color/yellow"
-
-        android:text="@string/Portadalogin"
-        android:textColor="@color/black"
-        android:textSize="60px"
-        app:layout_constraintBottom_toTopOf="@+id/btnlogin"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
-
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="299dp"
-        android:layout_height="306dp"
-        android:layout_marginTop="84dp"
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:layout_marginTop="120dp"
         android:src="@drawable/logocolor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+<LinearLayout
+    android:layout_width="800dp"
+    android:layout_height="600dp"
+    android:layout_marginTop="445dp"
+    android:orientation="vertical"
+    >
 
+    <Button
+android:layout_marginLeft="70dp"
+
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/yellow"
+        android:text="@string/Portadalogin"/>
+    <Button
+        android:layout_marginLeft="70dp"
+android:layout_marginBottom="20dp"
+        android:layout_width="255dp"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/yellow"
+
+        android:text="@string/registrarsePortada"
+      />
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="433dp"
-        android:layout_height="286dp"
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:src="@drawable/motoportada"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        />
+
+</LinearLayout>
+
+
+</RelativeLayout>
