--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,26 +3,21 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/celeste"
+    android:layout_height="wrap_content"
     android:gravity="center"
     android:orientation="vertical"
+    android:background="@drawable/fondomain"
     tools:context=".MainActivity">
+
     <LinearLayout
-        android:layout_marginTop="100dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="50dp"
         android:orientation="vertical">
-
-         <ImageView
-             android:layout_marginTop="20dp"
-
-
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             android:src="@drawable/logorpm"/>
-
         <Button
+            android:id="@+id/btnlogin"
             android:text="@string/Portadalogin"
             android:backgroundTint="@color/yellow"
             android:layout_marginTop="20dp"
@@ -31,6 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         <Button
+            android:id="@+id/btnregister"
             android:text="@string/registrarsePortada"
             android:backgroundTint="@color/yellow"
             android:layout_marginTop="21dp"
@@ -38,12 +34,6 @@
             android:layout_marginRight="20dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
-        <ImageView
-            android:layout_marginTop="20dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/motoportada"/>
-
     </LinearLayout>
 
 
