--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,144 +1,153 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    tools:context=".LoginActivity">
-
+    tools:context=".RegisterActivity">
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="35dp"
+            android:layout_marginTop="40dp"
             android:layout_marginBottom="20dp"
             android:text="@string/registraso"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="25dp" />
 
-        <LinearLayout
-            android:layout_marginTop="100dp"
-            android:layout_width="match_parent"
-            android:layout_height="700dp"
-            android:background="@drawable/rounded_corner_top_left"
-            android:orientation="vertical"
-            android:padding="16dp"
-            >
 
-
-
-                <com.google.android.material.textfield.TextInputLayout
+                <LinearLayout
+                    android:layout_marginTop="120dp"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    app:boxBackgroundMode="none">
+                    android:layout_height="700dp"
+                    android:background="@drawable/rounded_corner_top_left"
+                    android:orientation="vertical"
+                    android:padding="16dp"
+                    >
 
-                        <com.google.android.material.textfield.TextInputEditText
 
+
+                        <com.google.android.material.textfield.TextInputLayout
                             android:layout_width="match_parent"
-                            android:layout_marginTop="20dp"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            app:boxBackgroundMode="none">
+
+                                <com.google.android.material.textfield.TextInputEditText
+
+                                    android:layout_width="match_parent"
+                                    android:layout_marginTop="20dp"
+                                    android:layout_marginBottom="20dp"
+                                    android:layout_height="wrap_content"
+                                    android:hint="@string/nombres"
+                                    android:inputType="text"
+                                    android:textColor="@color/black"
+                                    android:textColorHint="@color/black" />
+
+                        </com.google.android.material.textfield.TextInputLayout>
+                        <com.google.android.material.textfield.TextInputLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            app:boxBackgroundMode="none">
+
+                                <com.google.android.material.textfield.TextInputEditText
+
+                                    android:layout_width="match_parent"
+                                    android:layout_marginTop="10dp"
+                                    android:layout_marginBottom="20dp"
+                                    android:layout_height="wrap_content"
+                                    android:hint="@string/apellidos"
+                                    android:inputType="text"
+                                    android:textColor="@color/black"
+                                    android:textColorHint="@color/black" />
+
+                        </com.google.android.material.textfield.TextInputLayout>
+                        <com.google.android.material.textfield.TextInputLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            app:boxBackgroundMode="none">
+
+                                <com.google.android.material.textfield.TextInputEditText
+
+                                    android:layout_width="match_parent"
+                                    android:layout_marginTop="10dp"
+                                    android:layout_marginBottom="20dp"
+                                    android:layout_height="wrap_content"
+                                    android:hint="@string/usuarioor"
+                                    android:inputType="textEmailAddress"
+                                    android:textColor="@color/black"
+                                    android:textColorHint="@color/black" />
+
+                        </com.google.android.material.textfield.TextInputLayout>
+
+                        <com.google.android.material.textfield.TextInputLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
                             android:layout_marginBottom="20dp"
-                            android:layout_height="wrap_content"
-                            android:hint="@string/usuarioor"
-                            android:inputType="textEmailAddress"
-                            android:textColor="@color/black"
-                            android:textColorHint="@color/black" />
+                            android:gravity="center"
+                            app:boxBackgroundMode="none"
+                            app:endIconMode="password_toggle">
 
-                </com.google.android.material.textfield.TextInputLayout>
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    app:boxBackgroundMode="none">
-
-                        <com.google.android.material.textfield.TextInputEditText
-
+                                <com.google.android.material.textfield.TextInputEditText
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:hint="@string/password"
+                                    android:inputType="textPassword"
+                                    android:textColor="@color/black"
+                                    android:textColorHint="@color/black" />
+                        </com.google.android.material.textfield.TextInputLayout>
+                        <com.google.android.material.textfield.TextInputLayout
                             android:layout_width="match_parent"
-                            android:layout_marginTop="20dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="10dp"
                             android:layout_marginBottom="20dp"
-                            android:layout_height="wrap_content"
-                            android:hint="@string/usuarioor"
-                            android:inputType="textEmailAddress"
-                            android:textColor="@color/black"
-                            android:textColorHint="@color/black" />
+                            android:gravity="center"
+                            app:boxBackgroundMode="none"
+                            app:endIconMode="password_toggle">
 
-                </com.google.android.material.textfield.TextInputLayout>
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    app:boxBackgroundMode="none">
+                                <com.google.android.material.textfield.TextInputEditText
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:hint="@string/passwordconfirm"
+                                    android:inputType="textPassword"
+                                    android:textColor="@color/black"
+                                    android:textColorHint="@color/black" />
+                        </com.google.android.material.textfield.TextInputLayout>
 
-                        <com.google.android.material.textfield.TextInputEditText
 
+                        <CheckBox
                             android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Aceptarterminos y condiciones"
+                            android:textSize="15dp"
+                            tools:ignore="TextSizeCheck" />
+                        <Button
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
                             android:layout_marginTop="20dp"
-                            android:layout_marginBottom="20dp"
-                            android:layout_height="wrap_content"
-                            android:hint="@string/usuarioor"
-                            android:inputType="textEmailAddress"
-                            android:textColor="@color/black"
-                            android:textColorHint="@color/black" />
+                            android:backgroundTint="@color/yellow"
+                            android:text="@string/ingreso"
+                            android:textColor="@color/white" />
 
-                </com.google.android.material.textfield.TextInputLayout>
-
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="20dp"
-                    android:gravity="center"
-                    app:boxBackgroundMode="none"
-                    app:endIconMode="password_toggle">
-
-                        <com.google.android.material.textfield.TextInputEditText
+                        <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:hint="@string/password"
-                            android:inputType="textPassword"
+                            android:layout_marginTop="16dp"
+                            android:text="@string/registrate"
+                            android:textAlignment="center"
                             android:textColor="@color/black"
-                            android:textColorHint="@color/black" />
-                </com.google.android.material.textfield.TextInputLayout>
-                <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="20dp"
-                    android:gravity="center"
-                    app:boxBackgroundMode="none"
-                    app:endIconMode="password_toggle">
+                            android:textSize="15dp"
+                            tools:ignore="TextSizeCheck" />
+                </LinearLayout>
 
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:hint="@string/password"
-                            android:inputType="textPassword"
-                            android:textColor="@color/black"
-                            android:textColorHint="@color/black" />
-                </com.google.android.material.textfield.TextInputLayout>
-            <CheckBox
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Aceptarterminos y condiciones"
-                android:textSize="15dp"/>
-                <Button
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
-                    android:backgroundTint="@color/yellow"
-                    android:text="@string/ingreso"
-                    android:textColor="@color/white" />
-
-
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textAlignment="center"
-                    android:textSize="15dp"
-                    android:textColor="@color/black"
-                    android:text="@string/registrate"/>
-        </LinearLayout>
 
 </RelativeLayout>
+
+</ScrollView>
