cambios de responsividad

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,28 +12,30 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
         android:layout_marginLeft="50dp"
+        android:layout_marginTop="100dp"
         android:layout_marginRight="50dp"
         android:orientation="vertical">
+
         <Button
             android:id="@+id/btnlogin"
-            android:text="@string/Portadalogin"
-            android:backgroundTint="@color/yellow"
-            android:layout_marginTop="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginRight="20dp"
+            android:backgroundTint="@color/yellow"
+            android:text="@string/Portadalogin" />
+
         <Button
             android:id="@+id/btnregister"
-            android:text="@string/registrarsePortada"
-            android:backgroundTint="@color/yellow"
-            android:layout_marginTop="21dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="21dp"
+            android:layout_marginRight="20dp"
+            android:backgroundTint="@color/yellow"
+            android:text="@string/registrarsePortada" />
     </LinearLayout>
 
 
